Changing some titles

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="about.html">Acerca de</a></li>
-                    <li><a href="contact.html">Contactanos</a></li>
+                    <li><a href="contact.html">Contáctanos</a></li>
             </ul>
             </div><!--/.nav-collapse -->
         </div>
