--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#showcase">Inicio</a></li>
                     <li><a href="about.html">Acerca de</a></li>
-                    <li><a href="contact.html">Contactanos</a></li>
+                    <li><a href="contact.html">Contáctanos</a></li>
                 </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -38,6 +38,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-sm-5">
+                        <h1 class="title-right">
+                            Contáctanos
+                        </h1>
                         <form>
                             <div class="form-group">
                                 <label>Nombre: </label>
